--- a/books/templates/books/book_detail.html
+++ b/books/templates/books/book_detail.html
@@ -1,6 +1,28 @@
-{% extends 'base.html' %}
-{% block content %}
-    <h1>Book Details</h1>
-    <h2>Name: {{ object.name }}</h2>
-    Pages: {{ object.pages }}
-{% endblock content %}
+
+<div class="modal-header">
+  <h3 class="modal-title">Book details</h3>
+  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
+<div class="modal-body">
+
+  <div class="">
+    Title:
+    {{ object.name }}
+  </div>
+  <div class="">
+    Author:
+    {{ object.author }}
+  </div>
+  <div class="">
+    Pages:
+    {{ object.pages }}
+  </div>
+
+</div>
+
+<div class="modal-footer">
+  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+</div>
