--- a/books/templates/books/book_form.html
+++ b/books/templates/books/book_form.html
@@ -1,10 +1,36 @@
-{% extends 'base.html' %}
 {% load crispy_forms_tags %}
-{% block content %}
-    <h1>Book Edit</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" class="btn btn-info">Submit</button>
-    </form>
-{% endblock content %}
+
+<form method="post" action="">
+    {% csrf_token %}
+
+    <div class="modal-header">
+        {% if object %}
+            <h5 class="modal-title">Edit Book</h5>
+        {% else %}
+            <h5 class="modal-title">Add Book</h5>
+        {% endif %}
+
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+
+    <div class="modal-body">
+        {% crispy form %}
+    </div>
+
+    <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+
+        <button type="button" class="submit-btn btn btn-primary">
+            {% if object %}
+                Update
+            {% else %}
+                Create
+            {% endif %}
+        </button>
+    </div>
+
+</form>
+
+
