--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,10 @@
 
 
         <!-- Your stuff: Third-party CSS libraries go here -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+              integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
+              crossorigin="anonymous">
+
 
         <!-- This file stores project-specific CSS -->
 
