cleans up template

--- a/books/templates/books/datatable.html
+++ b/books/templates/books/datatable.html
@@ -25,11 +25,6 @@
 
     <!-- Load js for initializing tables via their server-side options -->
     <script type="text/javascript" charset="utf8" src="{% static 'js/datatableview.js' %}"></script>
-    {#    <script type="text/javascript">#}
-    {#        $(function () {#}
-    {#            datatableview.initialize($('.datatable'));#}
-    {#        });#}
-    {#    </script>#}
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/js/select2.min.js"></script>
     <script src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
@@ -41,11 +36,9 @@
 
         });
 
-
-    </script>
-
-    <script type="text/javascript">
         var opts = {
+            // the data is loaded via ajax so wait for the buttons
+            // to get loaded before trying to wire them with the modalForm
             fnInitComplete: function (oSettings, json) {
 
                 $("tbody button").each(function () {
